--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "samdark/phpunit-bug-separate-process",
     "type": "project",
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "require": {
         "php": "^7.2"
     },
